--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
         {
             "label": "go-build",
             "type": "shell",
-            "command": "GOOS=linux GOARCH=amd64 go build -ldflags \"-X main.metaVersion=$(git describe --tags --abbrev=0) -X main.metaRevision=$(git rev-parse --short HEAD)\" -o build/ping-grpc-client ./src",
+            "command": "docker exec -it go_build_ping-grpc-client target_data/ping-grpc-client/.script/go_build.sh 'linux' 'amd64' 'build/ping-grpc-client'",
             "args": [],
             "group": {
                 "kind": "build",
@@ -25,7 +25,7 @@
         {
             "label": "go-build-windows",
             "type": "shell",
-            "command": "GOOS=windows GOARCH=amd64 go build -ldflags \"-X main.metaVersion=$(git describe --tags --abbrev=0) -X main.metaRevision=$(git rev-parse --short HEAD)\" -o build/win-ping-grpc-client.exe ./src",
+            "command": "docker exec -it go_build_ping-grpc-client target_data/ping-grpc-client/.script/go_build.sh 'windows' 'amd64' 'build/win-ping-grpc-client.exe'",
             "args": [],
             "presentation": {
                 "echo": false,
