ビルドスクリプトを修正

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -44,7 +44,6 @@
             "type": "shell",
             "command": "_USER=\"$(id -u):$(id -g)\" docker-compose -f .docker/docker-compose.yml build",
             "problemMatcher": []
-            
         },
         {
             "label": "develop container start",
@@ -55,7 +54,13 @@
         {
             "label": "develop container stop",
             "type": "shell",
-            "command": "docker-compose -f .docker/docker-compose.yml down",
+            "command": "_USER=\"$(id -u):$(id -g)\" docker-compose -f .docker/docker-compose.yml stop",
+            "problemMatcher": []
+        },
+        {
+            "label": "develop container remove",
+            "type": "shell",
+            "command": "_USER=\"$(id -u):$(id -g)\" docker-compose -f .docker/docker-compose.yml down",
             "problemMatcher": []
         },
         {
