ビルド用のファイルの更新
Squashed commit of the following:

commit 2b768bce7d97bf13ca0ce31254ee1d021d418202
Author: umenosuke <umenosuke.net@gmail.com>
Date:   Wed Mar 25 15:48:18 2020 +0900

    ビルドスクリプトの更新

commit 67ab0ba50aeaee484e0f83f32ee85aad2c34639d
Author: umenosuke <umenosuke.net@gmail.com>
Date:   Wed Mar 25 15:24:59 2020 +0900

    protoのリポジトリの更新

commit b5dd1a0fd5d16ef3f2212f2392309e3ced93df42
Author: umenosuke <umenosuke.net@gmail.com>
Date:   Wed Mar 25 15:18:40 2020 +0900

    ビルド用コンテナの更新

commit 0135e482063db182430e7f71a3864c51eafbf968
Author: umenosuke <umenosuke.net@gmail.com>
Date:   Fri Mar 20 16:47:13 2020 +0900

    ビルドタスクの更新

commit 2c7247fcf3f5272d7b28ee0eea7bf5cfc0a39dd1
Author: umenosuke <umenosuke.net@gmail.com>
Date:   Wed Mar 18 09:55:29 2020 +0900

    ビルドタスクの更新

commit 529f8c950340c7bcb21d016b79a57f256e68964a
Author: umenosuke <umenosuke.net@gmail.com>
Date:   Sun Mar 15 13:08:21 2020 +0900

    ビルドスクリプトの更新

commit c41cbe9be7cc43894f7c9c2d1546b68107a95134
Author: umenosuke <umenosuke.net@gmail.com>
Date:   Sun Mar 15 13:07:33 2020 +0900

    release用のスクリプトを修正

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,10 @@
         {
             "label": "go-build",
             "type": "shell",
-            "command": "docker exec -it go_build_ping-grpc-client target_data/ping-grpc-client/.script/go_build.sh 'linux' 'amd64' 'build/ping-grpc-client'",
+            "command": "docker exec -it go_build_ping-grpc-client target_data/.script/go_build.sh 'linux' 'amd64' './src' 'build/ping-grpc-client'",
+            "dependsOn": [
+                "develop container start"
+            ],
             "group": {
                 "kind": "build",
                 "isDefault": true
@@ -16,8 +19,10 @@
         {
             "label": "go-build-windows",
             "type": "shell",
-            "command": "docker exec -it go_build_ping-grpc-client target_data/ping-grpc-client/.script/go_build.sh 'windows' 'amd64' 'build/win-ping-grpc-client.exe'",
-            "args": [],
+            "command": "docker exec -it go_build_ping-grpc-client target_data/.script/go_build.sh 'windows' 'amd64' './src' 'build/win-ping-grpc-client.exe'",
+            "dependsOn": [
+                "develop container start"
+            ],
             "problemMatcher": [
                 "$go"
             ]
@@ -25,8 +30,10 @@
         {
             "label": "go-build-release",
             "type": "shell",
-            "command": "docker exec -it go_build_ping-grpc-client target_data/ping-grpc-client/.script/go_build_release.sh",
-            "args": [],
+            "command": "docker exec -it go_build_ping-grpc-client target_data/.script/go_build_release.sh",
+            "dependsOn": [
+                "develop container start"
+            ],
             "problemMatcher": [
                 "$go"
             ]
@@ -40,7 +47,7 @@
         {
             "label": "develop container start",
             "type": "shell",
-            "command": "_USER=\"$(id -u):$(id -g)\" docker-compose -f .docker/docker-compose.yml up",
+            "command": "_USER=\"$(id -u):$(id -g)\" docker-compose -f .docker/docker-compose.yml up -d",
             "problemMatcher": []
         },
         {
@@ -59,6 +66,9 @@
             "label": "protobuf build in container",
             "type": "shell",
             "command": "docker exec -it proto_build_ping-grpc-client target_data/.script/proto_build.sh",
+            "dependsOn": [
+                "develop container start"
+            ],
             "problemMatcher": []
         }
     ]
