--- a/.docker/docker-compose.yml
+++ b/.docker/docker-compose.yml
@@ -1,13 +1,16 @@
-version: '3'
+version: '3.4'
 services:
   proto_build_ping-grpc-client:
-    build: proto_build
+    build: 
+      context: proto_build
+      target: base
     tty: true
     user: "${_USER}"
     privileged: true
     container_name: proto_build_ping-grpc-client
     volumes:
-      - "../proto/:/target_data"
+      - "../proto/:/target_data:ro"
+      - "../proto/go:/target_data/go:rw"
   go_build_ping-grpc-client:
     build: go_build
     tty: true
@@ -15,4 +18,4 @@ services:
     privileged: true
     container_name: go_build_ping-grpc-client
     volumes:
-      - "../:/target_data/ping-grpc-client"
+      - "../:/target_data:rw"
