--- a/.docker/go_build/Dockerfile
+++ b/.docker/go_build/Dockerfile
@@ -1,20 +1,6 @@
-FROM centos:7
+FROM golang:1.20 AS builder
 
-RUN yum update -y
-RUN yum install -y wget zip unzip git
-
-ARG GO_VERSION='1.14.1'
-ARG GO_BINARY='go'"${GO_VERSION}"'.linux-amd64.tar.gz'
-RUN wget https://dl.google.com/go/"${GO_BINARY}" -O /tmp/"${GO_BINARY}"
-RUN tar -C /usr/local -xzf /tmp/"${GO_BINARY}"
-ENV GOROOT=/usr/local/go
-RUN echo 'export GOROOT="'"${GOROOT}"'"' >> /etc/profile.d/myGo.sh
-ENV GOPATH=/usr/local/gopath
-RUN mkdir -p ${GOPATH} && chmod 777 ${GOPATH}
-RUN echo 'export GOPATH="'"${GOPATH}"'"' >> /etc/profile.d/myGo.sh
-RUN echo 'export PATH=${PATH}:${GOROOT}/bin:${GOPATH}/bin' >> /etc/profile.d/myGo.sh
-ENV GOCACHE=/.cache/go-build
-RUN mkdir -p ${GOCACHE} && chmod 777 ${GOCACHE}
-ENV PATH=${PATH}:${GOROOT}/bin:${GOPATH}/bin
-
+RUN mkdir /.cache && chmod 777 /.cache
+RUN apt update && apt install zip -y
+WORKDIR /
 ENV TZ=Asia/Tokyo
